# SimplePlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SimplePlayer.podspec  build.sh
Diary/: 2023年5月31日 ~ 2023年7月9日（OpenGL学习）.md  diary.md
SimplePlayer/: ViewController.mm
SimplePlayer.xcodeproj/: project.pbxproj
SimplePlayer/Preview/: PreviewManager_Mac.mm
SimplePlayer/SimplePlayer/: AppDelegate.m  FFmpeg的替身  ViewController.h  ViewController.m  ViewController.mm
SimplePlayer/SimplePlayer.xcodeproj/: project.pbxproj
SimplePlayer/SimplePlayer/Base/: Frame.cpp  Frame.hpp  RingQueue.hpp  SPLog.cpp  SPLog.h
SimplePlayer/SimplePlayer/Base.lproj/: Main.storyboard
SimplePlayer/SimplePlayer/Base/Bridge/: SPNSObjectHolder.hpp  SPNSObjectHolder.mm
SimplePlayer/SimplePlayer/Base/Engine/: ISPGraphContext.hpp  ISPTaskQueue.cpp  ISPUnit.cpp  ISPUnit.hpp  SPGraphPreview.cpp  SPGraphPreview.hpp  SPMsg.cpp  SPMsg.hpp  SPTaskQueueApple.hpp  SPTaskQueueApple.mm
SimplePlayer/SimplePlayer/Base/Model/: AudioFrameBase.cpp  AudioFrameBase.hpp  Geometry.cpp  Pipeline.hpp  SPMediaModel.cpp  VideoFrameBase.cpp  VideoFrameBase.hpp  VideoTransform.cpp  VideoTransform.hpp
SimplePlayer/SimplePlayer/Base/PureCpp/: SPEnum.h  SPParam.hpp
SimplePlayer/SimplePlayer/Decoder/: DecoderManager.cpp  DecoderManager.hpp
SimplePlayer/SimplePlayer/Preview/: AudioOutputManager.cpp  AudioOutputManager.hpp  IPreviewManager.hpp  PreviewManager_Mac.h  PreviewManager_Mac.mm
SimplePlayer/SimplePlayer/Preview/Reader/: ImageReader.hpp
SimplePlayer/SimplePlayer/Preview/Renderer/: BaseRenderer.hpp  GLContext.hpp  GLContext.mm  GLRendererBase.cpp  GLRendererBase.hpp  GLRendererBase.mm  GLRendererCharPainting.cpp  GLRendererCharPainting.hpp  GLRendererMultiBlend.cpp  GLRendererMultiBlend.hpp  GLRendererPreview.cpp  GLRendererPreview.hpp
SimplePlayer/SimplePlayer/Preview/Writer/: ImageWriterUIImage.h  ImageWriterUIImage.mm
SimplePlayer/SimplePlayer/Renderer/: AudioRendererManager.cpp  AudioRendererManager.hpp  VideoRendererManager.cpp
proj/mac/: Podfile
proj/mac/SimplePlayer/: AppDelegate.h  FFMpeg的替身  ViewController.mm  main.m
proj/mac/SimplePlayer.xcodeproj/: project.pbxproj
proj/mac/SimplePlayer/Base.lproj/: Main.storyboard
proj/mac/SimplePlayer/SimplePlayer.xcdatamodeld/: .xccurrentversion
proj/win/: main.cpp
proj/win/GUI/: main_win32.cpp  main_win32.h
src/: AppDelegate.h  AppDelegate.m  Main.storyboard  SceneDelegate.m  ViewController.h  ViewController.m  main.cpp  main.m
src/Ability/Decode/: DecoderManager.hpp  SPDecodeReaderFF.cpp  SPDecodeReaderFF.hpp
src/Ability/Encode/: ImageWriterBmp.cpp  ImageWriterBmp.h
src/Ability/Preview/: AudioOutputManager.cpp  AudioOutputManager.hpp  IPreviewManager.hpp  PreviewManager_Mac.mm
src/Ability/Process/: GLRendererBase.cpp  GLRendererCharPainting.cpp  GLRendererMultiBlend.cpp  GLRendererMultiBlend.hpp  GLRendererPreview.hpp  VideoTransform.cpp  VideoTransform.hpp
src/Base/Data/: Geometry.hpp  RingQueue.hpp  SPEnum.h  SPParam.cpp  SPParam.hpp  SPSemaphore.hpp
src/Base/Tools/: SPLog.h
src/Engine/Graph/: ISPGraph.hpp  ISPGraphContext.hpp  ISPMediaControl.hpp  ISPModelControl.hpp  ISPTaskQueue.hpp  SPGraphPreview.hpp  SPMsg.hpp  SPTaskQueueApple.hpp  SPTaskQueueApple.mm
src/Engine/Model/: AudioFrameBase.hpp  Pipeline.cpp  Pipeline.hpp  SPMediaModel.hpp
src/Engine/Unit/: AudioRendererManager.hpp  VideoRendererManager.hpp
(+32 files in other folders)
